landing page - form / showcase

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -137,7 +137,7 @@ body {
   // Right side - showcase
   #showcase-right {
     height: 100vh;
-    background: url('/dist/img/login-bg.jpg');
+    background: url('../img/login-bg.jpg');
     flex: 2;
     display: flex;
     justify-content: center;
